--- a/css/ingredients/ingredients.css
+++ b/css/ingredients/ingredients.css
@@ -1,5 +1,5 @@
 .ingredients{
-    max-height: 1080px;
+    min-height: 100%;
     height: 100%;
     width: 100%;
 
@@ -7,6 +7,13 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+
+
+    background-image: url("../../img/ingredients_background.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    overflow-y: hidden;
 
 }
 
@@ -17,5 +24,6 @@
 @media all and (max-width: 1000px) {
     .ingredients{
         align-items: flex-start;
+        height: 900px;
     }
 }
