--- a/css/page-wrapper/product/links/__socials/links__socials.css
+++ b/css/page-wrapper/product/links/__socials/links__socials.css
@@ -8,11 +8,14 @@
 @media all and (max-width: 1000px){
     .links__socials{
         width: 200px;
+        margin-bottom: 30px;
+
     }
 }
 
 @media all and (min-width: 2500px){
     .links__socials{
         width: 500px;
+
     }
 }
