--- a/css/page-wrapper/product/product.css
+++ b/css/page-wrapper/product/product.css
@@ -1,7 +1,8 @@
 .product{
-    height: auto;
+    height: 100%;
+    min-height: 100%;
     margin: auto;
-    max-width: 1920px;
+
 }
 
 .product--blurred{
