--- a/css/presentation/presentation-main/__popup-menu/presentation__popup-menu.css
+++ b/css/presentation/presentation-main/__popup-menu/presentation__popup-menu.css
@@ -9,6 +9,9 @@
 
     height: 100%;
     min-height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .presentation__popup-menu--hidden{
