--- a/styles/max-life.sass
+++ b/styles/max-life.sass
@@ -11,6 +11,7 @@
 @import "../css/page-wrapper/product/product-main/__comment/product-main__comment.css"
 @import "../css/page-wrapper/product/product-main/__title/product-main__title.css"
 @import "../css/page-wrapper/product/product-main/__call/product-main__call.css"
+@import "../css/page-wrapper/product/product-main/__mark/product-main__mark.css"
 @import "../css/page-wrapper/product/links/links.css"
 @import "../css/page-wrapper/product/links/__socials-item/links__socials-item.css"
 @import "../css/page-wrapper/product/links/__socials/links__socials.css"
@@ -44,6 +45,7 @@
 @import "../css/presentation/presentation-main/__back/presentation__back.css"
 @import "../css/presentation/presentation-main/__back-title/presentation__back-title.css"
 @import "../css/ingredients/ingredients-main/__number/ingredients__number.css"
+@import "../css/presentation/presentation-main/__menu-main/presentation__menu-main.css"
 @import "../css/ingredients/ingredients-main/__number-image/ingredients__number-image.css"
 @import "../css/ingredients/ingredients-main/__numbers-container/numbers/numbers.css"
 @import "../css/ingredients/ingredients-main/__numbers-container/ingredients__numbers-container.css"
@@ -58,27 +60,5 @@ html
 
 body
   margin: 0
-  background-size: cover
-  background-repeat: no-repeat
-  background-position-x: center
-  background-position-y: top
   min-height: 100%
   height: 100%
-
-
-.product-body
-  background-image: url("../img/background.png")
-
-.ing-body
-  background-image: url("../img/ingredients_background.png")
-
-@media all and (max-width: 1000px)
-  body
-    background-position-x: 36%
-
-@media all and (max-width: 430px)
-  body
-    background-position-y: 70%
-
-  .product-body
-    background-image: url("../img/product_background_320.png")
